[package]
name = "creator_direct"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0", default-features = false }

[dev-dependencies]
ink_e2e = "5.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
